# HDLGameInstaller

./: README.md
.github/workflows/: CI.yml
HDLGameInstaller/: Makefile  UI.h  graphics.h
MiniOPL (OUTDATED)/: Makefile  README.MD
MiniOPL (OUTDATED)/include/: hddsupport.h  system.h
MiniOPL (OUTDATED)/modules/hdd/apa/: apa-opt.h
MiniOPL (OUTDATED)/modules/iopcore/cdvdman/: streaming.c
MiniOPL (OUTDATED)/src/: bootgame.c  hdd.c  system.c
PC-Client/: HDLGManClient.sln
PC-Client/HDLGManClient/: CMakeLists.txt  HDLGManClient.c  HDLGManClient.h  HDLGManClient.vcxproj  HDLGManClient.vcxproj.filters  MainWindow.aps  OSD.c  OSD.h  client.c  client.h  install-main.c  install.h  io.c  io.h  iso9660.c  iso9660.h  main.c  main.h  system.c  system.h
__Package/: README.txt
__Package/PC/: README.txt
__Package/PS2/: Changelog.txt  README.txt
__Package/PS2/lang/: fonts.txt  labels_DU.txt  labels_FR.txt  labels_GE.txt  labels_IT.txt  labels_PO.txt  labels_SP.txt  strings_DU.txt  strings_FR.txt  strings_GE.txt  strings_IT.txt  strings_PO.txt  strings_SP.txt
